# java-imgui-wrapper

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImGuiWrapper.cpp  classes.h
app/src/main/cpp/Incluedes/: Logger.h
app/src/main/cpp/JniInterface/: JniInterface.h
app/src/main/java/com/xa/JavaImgui/: Logger.java  MainActivity.java  MyGLSurfaceView.java  NativeMethod.java  TouchView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
